@@ -12,6 +12,7 @@ S3method(Effect, lm)
 S3method(Effect, mer)
 S3method(Effect, lme)
 S3method(Effect, gls)
+S3method(Effect, multinom)
 S3method(print, eff)
 S3method(print, efflist)
 S3method(print, summary.eff)
